--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3>Hi, I am Saurabh Vinodiya</h3>
         <span>Front-End Developer</span>
         <p>Dedicated individual with impressive problem-solving skills. Keen on utilizing and leveraging skills and experience.</p>
-        <a href="about.html" class="btn"> About me <i class="fas fa-user"></i> </a>
+        <a href="pages/about.html" class="btn"> About me <i class="fas fa-user"></i> </a>
     </div>
 
 </section>
