--- a/pages/about.html
+++ b/pages/about.html
@@ -61,7 +61,7 @@
 
             </div>
 
-            <a href="https://drive.google.com/uc?export=download&id=1on-NqAMTXb8YSPYk0AADIdNbum1FapP_" class="btn"> Download CV <i class="fas fa-download"></i> </a>
+            <a href="https://drive.google.com/uc?id=19h72Ps1YXIVrPd5APgU6QRqQOdk2KS2H&export=download" class="btn"> Download CV <i class="fas fa-download"></i> </a>
 
         </div>
 
@@ -144,7 +144,7 @@
             <i class="fas fa-graduation-cap"></i>
             <span>2019 - 2023</span>
             <h3>Gyan Ganga Institute Of Technology And Sciences, Jabalpur</h3>
-            <p>Bachelor of Technology<br>Specialization : Electronics and Communication<br>University : RGPV<br>Percentage : 93.1</p>
+            <p>Bachelor of Technology<br>Specialization : Electronics and Communication<br>University : RGPV<br>Percentage : 90.9</p>
         </div>
 
         <div class="box">
