--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="content">
         <h3>Hi, I am Saurabh Vinodiya</h3>
-        <span>Front-End Developer</span>
+        <span>Electronics and Communication Engineer</span>
         <p>Dedicated individual with impressive problem-solving skills. Keen on utilizing and leveraging skills and experience.</p>
         <a href="pages/about.html" class="btn"> About me <i class="fas fa-user"></i> </a>
     </div>
