--- a/pages/about.html
+++ b/pages/about.html
@@ -46,7 +46,7 @@
 
                 <div class="box">
                     <h3> <span>Name : </span> Saurabh Vinodiya </h3>
-                    <h3> <span>Age : </span> 21 </h3>
+                    <h3> <span>Age : </span> 22 </h3>
                     <h3> <span>Email : </span> sourabhb0371@gmail.com </h3>
                     <h3> <span>Address : </span> Jabalpur, Madhya Pradesh, India - 482001 </h3>
                 </div>
@@ -56,7 +56,7 @@
                     <h3> <span>Hometown : </span> Jabalpur </h3>
                     <h3> <span>Experience : </span> Fresher </h3>
                     <h3> <span>Language : </span> Hindi, English </h3>
-                    <h3> <span>Hobbies : </span> Reading, Listening to music </h3>
+                    <h3> <span>Hobbies : </span> Reading, Volleyball </h3>
                 </div>
 
             </div>
@@ -68,7 +68,7 @@
         <div class="count-container">
 
             <div class="box">
-                <h3>0</h3>
+                <h3>0-1</h3>
                 <p>Years of Experience</p>
             </div>
 
