--- a/index.html
+++ b/index.html
@@ -121,27 +121,27 @@
 
     <div class="box-container">
         <div class="box">
-            <img src="../images/java1.png">
+            <img src="images/java1.png">
             <h3>java</h3>
         </div>
         <div class="box">
-            <img src="../images/python.png">
+            <img src="images/python.png">
             <h3>python</h3>
         </div>
         <div class="box">
-            <img src="../images/c++.png">
+            <img src="images/c++.png">
             <h3>C++</h3>
         </div>
         <div class="box">
-            <img src="../images/icon-1.png">
+            <img src="images/icon-1.png">
             <h3>html</h3>
         </div>
         <div class="box">
-            <img src="../images/icon-2.png">
+            <img src="images/icon-2.png">
             <h3>css</h3>
         </div>
         <div class="box">
-            <img src="../images/mysql.png">
+            <img src="images/mysql.png">
             <h3>mysql</h3>
         </div>
     </div>
