--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
             <h3>java</h3>
         </div>
         <div class="box">
-            <img src="images/python.png">
-            <h3>python</h3>
+            <img src="images/react-icon.png">
+            <h3>react</h3>
         </div>
         <div class="box">
             <img src="images/c++.png">
